# ML_1module_Task

./: .gitignore  README.md  main.py  pyproject.toml
data/models/: model.pkl
models/: model.pkl
notebooks/: final_solution.ipynb
notebooks/data/: results.csv
py/: main.py
py/src/: model.py
src/: model.py
