[tool.poetry]
name = "ml-1module-task"
version = "0.1.0"
description = "Advanced ML 1st HW"
authors = [
    "VLsoft-eng <deeeaddrop@gmail.com>"
]
readme = "README.md"
packages = [{include = "py"}]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
catboost = ">=1.2.0"
optuna = ">=3.0.0"
clearml = ">=1.10.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
scikit-learn = ">=1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spaceship-titanic = "py.main:main"